First Semi-Working Version
Connects, selects the first ship, grabs the Helm, sends appropriate
packets as the potentiometers change.

--- a/build.xml
+++ b/build.xml
@@ -46,6 +46,7 @@
                 <path refid="classpath"/>
                 <path refid="application"/>
             </classpath>
+            <arg line="${args}" />
         </java>
     </target>
 
